--- a/examples/installation/ios/objc/CocoaPodsDynamicExample/Podfile
+++ b/examples/installation/ios/objc/CocoaPodsDynamicExample/Podfile
@@ -3,11 +3,12 @@
 
 use_frameworks!
 branch = ENV['sha']
+repo = defined?(ENV['repo']) ? ENV['repo'] : 'git@github.com:realm/realm-cocoa.git'
 
 target 'CocoaPodsDynamicExample' do
-  pod 'Realm', git: 'git@github.com:realm/realm-cocoa.git', branch: branch, submodules: true
+  pod 'Realm', git: repo, branch: branch, submodules: true
 end
 
 target 'CocoaPodsDynamicExampleTests' do
-  pod 'Realm', git: 'git@github.com:realm/realm-cocoa.git', branch: branch, submodules: true
+  pod 'Realm', git: repo, branch: branch, submodules: true
 end
